<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sy.yuanlixiaoduzi.com.ItemTongji">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            app:title="统计"
            android:layout_width="match_parent"
            android:id="@+id/activity_item_tongji"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/cardView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="总计" />

            <TextView
                android:id="@+id/tv_yundong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginStart="28dp"
                android:textColor="@color/blue"
                android:textSize="35sp"
                android:layout_marginTop="14dp"
                android:text="5" />



            <TextView
                android:id="@+id/tv_qianka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignTop="@+id/tv_yundong"
                android:textColor="@color/blue"
                android:textSize="35sp"
                android:text="523" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_qianka"
                android:layout_alignBottom="@+id/tv_qianka"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="20m16s"
                android:textColor="@color/blue"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_qianka"
                android:layout_centerHorizontal="true"
                android:text="@string/qianka" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_time"
                android:layout_marginEnd="46dp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv_yundong"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/tv_yundong"
                android:text="@string/yundong" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_below="@+id/cardView">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content">
                    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                        android:id="@+id/calendarView"
                        app:mcv_calendarMode="week"
                        app:mcv_dateTextAppearance="@style/MaterialCalendarTextStyelNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mcv_showOtherDates="all"
                        app:mcv_selectionColor="@color/blue"
                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cardView3"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/mypiechart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/cardView3"
                    android:layout_marginTop="19dp" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
